--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "googleapis": "^111.0.0",
+    "node-html-parser": "^6.1.5",
+    "ts-results": "^3.3.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
