--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "katian",
   "license": "ISC",
   "dependencies": {
+    "@googleapis/sheets": "^4.0.2",
     "axios": "^1.3.2",
     "chalk": "^5.2.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "googleapis": "^111.0.0",
+    "google-auth-library": "^8.7.0",
     "node-html-parser": "^6.1.5",
     "ts-results": "^3.3.0",
     "typescript": "^4.9.5"
