new slash command: new

--- a/.env_template
+++ b/.env_template
@@ -16,3 +16,7 @@ token_of_discord_bot=
 GCLOUD_PROJECT=
 # path to credentials (./secret/xxx.json)
 GOOGLE_APPLICATION_CREDENTIALS=
+# ID of google drive root folder
+id_of_root_folder=
+# ID of template spreadsheet
+id_of_template_spreadsheet=
