--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "tsc && node dist/index.js",
     "slash": "tsc && node dist/discord/commands/_deploy.js",
     "format": "prettier-standard --format",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && node dist/test.js"
   },
   "type": "module",
   "author": "katian",
   "license": "ISC",
   "dependencies": {
+    "@googleapis/drive": "^5.0.2",
     "@googleapis/sheets": "^4.0.2",
     "axios": "^1.3.2",
     "chalk": "^5.2.0",
