--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "discord.js": "^14.10.2",
     "dotenv": "^16.0.3",
     "google-auth-library": "^8.7.0",
+    "moment": "^2.30.1",
     "node-html-parser": "^6.1.5",
     "puppeteer": "^20.2.1",
     "ts-results": "^3.3.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "@types/uuid": "^9.0.7",
     "prettier-standard": "^16.4.1",
     "ts-standard": "^12.0.2"
   }
