--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "node-html-parser": "^6.1.5",
     "puppeteer": "^20.2.1",
     "ts-results": "^3.3.0",
-    "typescript": "^5.0.4",
+    "ts-results-es": "^4.1.0-alpha.1",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/uuid": "^9.0.7",
-    "prettier-standard": "^16.4.1",
-    "ts-standard": "^12.0.2"
+    "prettier-standard": "^16.4.1"
   }
 }
