--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "dotenv": "^16.0.3",
     "google-auth-library": "^8.7.0",
     "moment": "^2.30.1",
-    "node-html-parser": "^6.1.5",
     "puppeteer": "^20.2.1",
-    "ts-results": "^3.3.0",
     "ts-results-es": "^4.1.0-alpha.1",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
@@ -31,6 +29,12 @@
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/uuid": "^9.0.7",
-    "prettier-standard": "^16.4.1"
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "prettier": "^3.2.5"
   }
 }
